--- a/index.html
+++ b/index.html
@@ -75,34 +75,34 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li>
-														<a class="nav-link active" href="demo-it-services.html">
+														<a class="nav-link active" href="">
 															Home
 														</a>
 													</li>
 													<li>
-														<a class="nav-link" href="demo-it-services-about-us.html">
+														<a class="nav-link" href="">
 															About Us
 														</a>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="demo-it-services-services.html">
+														<a class="dropdown-item dropdown-toggle" href="">
 															BOT Support
 														</a>
 														<ul class="dropdown-menu">
 															<li>
-																<a class="nav-link" href="demo-it-services-services.html">Overview</a>
+																<a class="nav-link" href="">Overview</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-it-services-services-detail.html">Cloud Services</a>
+																<a class="nav-link" href="">Cloud Services</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-it-services-services-detail.html">Tech Support</a>
+																<a class="nav-link" href="">Tech Support</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-it-services-services-detail.html">Data Security</a>
+																<a class="nav-link" href="">Data Security</a>
 															</li>
 															<li>
-																<a class="nav-link" href="demo-it-services-services-detail.html">Software Dev</a>
+																<a class="nav-link" href="">Software Dev</a>
 															</li>
 														</ul>
 													</li>
@@ -482,16 +482,16 @@
 							<h4 class="ls-0">OUR SERVICES</h4>
 							<ul class="list-unstyled">
 								<li class="mb-1">
-									<a href="demo-it-services-services-detail.html">Cloud Services</a>
+									<a href="">Cloud Services</a>
 								</li>
 								<li class="mb-1">
-									<a href="demo-it-services-services-detail.html">Tech Support</a>
+									<a href="">Tech Support</a>
 								</li>
 								<li class="mb-1">
-									<a href="demo-it-services-services-detail.html">Data Security</a>
+									<a href="">Data Security</a>
 								</li>
 								<li>
-									<a href="demo-it-services-services-detail.html">Software Dev</a>
+									<a href="">Software Dev</a>
 								</li>
 							</ul>
 						</div>
@@ -499,10 +499,10 @@
 							<h4 class="ls-0">ABOUT</h4>
 							<ul class="list-unstyled">
 								<li class="mb-1">
-									<a href="demo-it-services-about-us.html">About Us</a>
+									<a href="">About Us</a>
 								</li>
 								<li>
-									<a href="demo-it-services-contact.html">Send a Message</a>
+									<a href="">Send a Message</a>
 								</li>
 							</ul>
 						</div>
